# nangband

nangband/: angband.dsp  angband.dsw  angdos.cfg  changes.txt  tolua.dsp
nangband-dev1/: .cvsignore  Makefile.am  Makefile.in  acconfig.h  antiband.diff  changes.txt  compile.html  compile.txt  configure  configure.ac  configure.in  devnotes.txt  devtopics  future.txt  licence.html  licence.txt  mkinstalldirs  readme.borg  readme.txt  thanks.txt  todo.txt
nangband-dev1/doc-xml/: compile.xml  licence.xml  make-html
nangband-dev1/lib/: Makefile.in
nangband-dev1/lib/help/: Makefile.am  Makefile.in  ahml.xml  ahmlt.xsl  copyright.xml  demo.xml  general.xml  help.xml  index.xml  list.xml  table.xml  version.xml
nangband-dev1/lib/help/coding/: Makefile.am  ahml.xml  coding_style.xml  compileoptions.xml  index.xml  taglist.xml  xmlband.xml
nangband-dev1/lib/help/err/: Makefile.am  notfound.xml  notparsed.xml
nangband-dev1/resources/: GtkLauncher.pl  ego_items.txt  rfc1925.txt
nangband-dev1/src/: .cvsignore  Makefile.am  Makefile.ami  Makefile.bcc  Makefile.bsd  Makefile.cyg  Makefile.dos  Makefile.emx  Makefile.gtk  Makefile.ibm  Makefile.in  Makefile.lcc  Makefile.lsl  Makefile.ros  Makefile.std  Makefile.wat  Makefile.win  angband.h  angband.rc  autoconf.h.in  birth.c  borg1.c  borg1.h  borg2.c  borg2.h  borg3.c  borg3.h  borg4.c  borg4.h  borg5.c  borg5.h  borg6.c  borg6.h  borg7.c  borg7.h  borg8.c  borg8.h  borg9.c  cave.c  cmd1.c  (+84 more)
nangband/buildscripts/: build_dos  (+7 more)
website/: changes.txt  index.php  index.php3  layout.php  move-site  sitedata.php  style.css
(+251 files in other folders)
